--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html lang="en"
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    title= content_for?(:title) ? yield(:title) : "FourCouch"
+    title= content_for?(:title) ? yield(:title) : "4Couch"
     = csrf_meta_tags
 
     /! Le HTML5 shim, for IE6-8 support of HTML elements
@@ -25,28 +25,17 @@ html lang="en"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.brand href="#"FourCouch
+          a.brand href=root_path 4Couch
           .container-fluid.nav-collapse
             ul.nav
-              li= link_to "Link 1", "/path1"
-              li= link_to "Link 2", "/path2"
-              li= link_to "Link 3", "/path3"
+              li= link_to "Communities", communities_path
 
     .container-fluid
-
       .row-fluid
-        .span3
-          .well.sidebar-nav
-            ul.nav.nav-list
-              li.nav-header Sidebar
-              li= link_to "Link 1", "/path1"
-              li= link_to "Link 2", "/path2"
-              li= link_to "Link 3", "/path3"
-        .span9
+        .span12
           = yield
     
       footer
-        p &copy; Company 2012
     /!
       Javascripts
       \==================================================
