--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,6 +29,7 @@ html lang="en"
           .container-fluid.nav-collapse
             ul.nav
               li= link_to "Communities", communities_path
+              li= link_to "Couches", couches_path
 
     .container-fluid
       .row-fluid
