--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,7 +30,20 @@ html lang="en"
             ul.nav
               li= link_to "Communities", communities_path
               li= link_to "Couches", couches_path
-
+            - if user_signed_in?
+              ul.nav.pull-right
+                li
+                  a href=edit_user_registration_path = current_user.email 
+                li
+                  a.gravatar href="#"= image_tag current_user.gravatar_url
+                li
+                  = link_to "Sign-out", destroy_user_session_path, method: "delete"
+            - else
+              ul.nav.pull-right
+                li
+                  a href=new_user_registration_path Sign-up
+                li
+                  a href=new_user_session_path Sign-in
     .container-fluid
       .row-fluid
         .span12
