--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,3 +30,12 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+
+@navbarHeight: 80px;
+@navbarBackground: @grayDark;
+@navbarBackgroundHighlight: @grayDark;
+@navbarText: @grayLight;
+@navbarLinkColor: @grayLight;
+@navbarLinkColorHover: @white;
+@navbarLinkColorActive: @navbarLinkColorHover;
+@bodyBackground: #5C3317;
