set gravatar default image size

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,8 @@
     li > a.user-nav-link {
 	padding: 8px 12px 8px 12px;
 	> img {
+	    width: 64px;
+	    height: 64px;
 	    margin-left: 12px;
 	    border-radius: 4px;
 	}
