add some missing translations

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -48,9 +48,9 @@ html lang="en"
             - else
               ul.nav
                 li
-                  a href=new_user_registration_path = Sign-up
+                  a href=new_user_registration_path = t :sign_up
                 li
-                  a href=new_user_session_path Sign-in
+                  a href=new_user_session_path = t :sign_in
     .container
       .row
         #main-content.span10.offset1
