--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,6 @@ html lang="en"
     title= content_for?(:title) ? yield(:title) : "4Couch"
     = csrf_meta_tags
 
-    /! Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     = stylesheet_link_tag "application", :media => "all"
@@ -30,11 +29,11 @@ html lang="en"
             ul.nav
               li= link_to t(:communities), communities_path
               li= link_to t(:couches), couches_path
-          #user-nav-container.container-fluid.pull-right
+          #user-nav-container.container-fluid.nav-collapse.pull-right
             - if user_signed_in?
               ul.nav
                 li.dropdown
-                  = link_to "#", class: 'dropdown-toggle user-nav-link', data: {toggle: 'dropdown'} do
+                  = link_to "#", class: 'dropdown-toggle user-nav-link visible-desktop', data: {toggle: 'dropdown'} do
                     span= current_user.email
                     = image_tag current_user.gravatar_url
                   ul.dropdown-menu
@@ -54,11 +53,9 @@ html lang="en"
     .container
       .row
         #main-content.span10.offset1
-          = yield
+          .row
+            .span8.offset1
+              = yield
     
       footer
-    /!
-      Javascripts
-      \==================================================
-    /! Placed at the end of the document so the pages load faster
     = javascript_include_tag "application"
