add username and allow username/email login

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  */
 
+
 .navbar .brand {
     font-size: 40px;
     color: #eee;
@@ -36,4 +37,5 @@
 
 #main-content {
     background: #fff;
+    padding: 20px 0px 20px 0px;
 }
