more coherent style

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -38,4 +38,4 @@ body {
 @navbarLinkColor: @grayLight;
 @navbarLinkColorHover: @white;
 @navbarLinkColorActive: @navbarLinkColorHover;
-@bodyBackground: #5C3317;
+@bodyBackground: #cde;
