--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -61,6 +61,12 @@ html lang="en"
               footer#page-footer
                 ul.breadcrumb
                   li
-                    a href="https://github.com/phorque/4couch" Fork me on Github
+                    a href="#"= t :about
+                  li.divider |
+                  li
+                    a href="#"= t :sitemap
+                  li.divider |
+                  li
+                    a href="https://github.com/phorque/4couch" target="_blank" = t :source_code
     = javascript_include_tag 'http://maps.googleapis.com/maps/api/js?key=AIzaSyBjfN8302UN7Pb_gN5aaVDnTEznfbqwvJg&sensor=true'
     = javascript_include_tag "application"
