--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,31 +1,39 @@
-h2
-  | Edit #{resource_name.to_s.humanize}
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  = devise_error_messages!
-  div
-    = f.label :email
-    br/
-    = f.email_field :email
-  div
-    = f.label :username
-    br/
-    = f.text_field :username
-  div
-    = f.label :password
-    i (leave blank if you don't want to change it)
-    br/
-    = f.password_field :password, :autocomplete => "off"
-  div
-    = f.label :password_confirmation
-    br/
-    = f.password_field :password_confirmation
-  div
-    = f.label :current_password
-    i (we need your current password to confirm your changes)
-    br/
-    = f.password_field :current_password
-  div= f.submit "Update"
-h3 Cancel my account
-p
-  | Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete}.
-= link_to "Back", :back
+h2= t :edit_account
+ul#edit-account-nav.nav.nav-pills
+  li.active
+    a href="#site-preferences" data-toggle="pill" = t :site_preferences
+  li
+    a href="#contact" data-toggle="pill" = t :contact
+  li
+    a href="#password" data-toggle="pill" = t :password
+
+= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+  .tab-content
+    .tab-pane.active id="site-preferences"
+        = devise_error_messages!
+        = f.label :username
+        = f.text_field :username
+
+        = f.input :locale, :collection => locales_collection
+
+    .tab-pane id="contact"
+      = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+        = f.label :email
+        = f.email_field :email
+
+    .tab-pane id="password"
+      = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+        = f.label :password
+        = f.password_field :password, :autocomplete => "off"
+        span.help-inline
+
+        = f.label :password_confirmation
+        = f.password_field :password_confirmation
+
+        = f.label :current_password
+        = f.password_field :current_password, :required => true
+        span.help-inline (we need your current password to confirm your changes)
+
+    .form-actions
+      = f.submit "Update", class: "btn btn-primary"
+      = link_to "Back", :back, class: "btn btn-link"
