--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -10,29 +10,26 @@ ul#edit-account-nav.nav.nav-pills
 = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
   .tab-content
     .tab-pane.active id="site-preferences"
-        = devise_error_messages!
-        = f.label :username
-        = f.text_field :username
+      = devise_error_messages!
+      = f.label :username
+      = f.text_field :username
 
-        = f.input :locale, :collection => locales_collection
+      = f.input :locale, :collection => locales_collection, :selected => I18n.locale
 
     .tab-pane id="contact"
-      = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-        = f.label :email
-        = f.email_field :email
+      = f.label :email
+      = f.email_field :email
 
     .tab-pane id="password"
-      = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-        = f.label :password
-        = f.password_field :password, :autocomplete => "off"
-        span.help-inline
+      = f.label :current_password
+      = f.password_field :current_password, :required => true
+      span.help-inline we need your current password to confirm your changes
 
-        = f.label :password_confirmation
-        = f.password_field :password_confirmation
+      = f.label :password
+      = f.password_field :password, :autocomplete => "off"
 
-        = f.label :current_password
-        = f.password_field :current_password, :required => true
-        span.help-inline (we need your current password to confirm your changes)
+      = f.label :password_confirmation
+      = f.password_field :password_confirmation
 
     .form-actions
       = f.submit "Update", class: "btn btn-primary"
