--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,9 +1,11 @@
 h2 Forgot your password?
 = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
   = devise_error_messages!
-  div
-    = f.label :login
-    br/
-    = f.text_field :login
-  div= f.submit "Send me reset password instructions"
-= render "devise/shared/links"
+
+  = f.label :login
+  = f.text_field :login
+
+  .form-actions
+    = f.submit "Send me reset password instructions", class: "btn btn-primary"
+    = link_to "Sign in", new_session_path(resource_name), class: "btn btn-link"
+    = link_to "Sign up", new_registration_path(resource_name), class: "btn btn-link"
