--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,21 +1,21 @@
 h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
-  div
-    = f.label :email
-    br/
-    = f.email_field :email
-  div
-    = f.label :username
-    br/
-    = f.text_field :username
-  div
-    = f.label :password
-    br/
-    = f.password_field :password
-  div
-    = f.label :password_confirmation
-    br/
-    = f.password_field :password_confirmation
-  div= f.submit "Sign up"
-= render "devise/shared/links"
+
+  = f.label :email
+  = f.email_field :email
+
+  = f.label :username
+  = f.text_field :username
+
+  = f.label :password
+  = f.password_field :password
+
+  = f.label :password_confirmation
+  = f.password_field :password_confirmation
+
+  .form-actions
+    = f.submit "Sign up", class: "btn btn-primary"
+    = link_to "Sign in", new_session_path(resource_name), class: "btn btn-link"
+    = link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-link"
+
