--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+form.edit_user .tab-content.registration {
+    min-height: 200px;
+}
+
+form.edit_user .tab-content.profile {
+    min-height: 200px;
+}
