--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -7,8 +7,8 @@ ul#edit-account-nav.nav.nav-pills
   li
     a href="#password" data-toggle="pill" = t :password
 
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  .tab-content
+= simple_form_for current_user, url: registration_path(resource_name) do |f|
+  .tab-content.registration
     .tab-pane.active id="site-preferences"
       = devise_error_messages!
       = f.label :username
@@ -31,6 +31,6 @@ ul#edit-account-nav.nav.nav-pills
       = f.label :password_confirmation
       = f.password_field :password_confirmation
 
-    .form-actions
-      = f.submit "Update", class: "btn btn-primary"
-      = link_to "Back", :back, class: "btn btn-link"
+  .form-actions
+    = f.submit class: "btn btn-primary"
+    = link_to t(:back), :back, class: "btn btn-link"
