--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,5 +1,5 @@
-h2 Sign up
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+h2= t :sign_up
+= simple_form_for(User.new, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
 
   = f.label :email
@@ -15,7 +15,7 @@ h2 Sign up
   = f.password_field :password_confirmation
 
   .form-actions
-    = f.submit "Sign up", class: "btn btn-primary"
-    = link_to "Sign in", new_session_path(resource_name), class: "btn btn-link"
-    = link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-link"
+    = f.submit class: "btn btn-primary"
+    = link_to t(:sign_in), new_session_path(resource_name), class: "btn btn-link"
+    = link_to t(:forgot_password), new_password_path(resource_name), class: "btn btn-link"
 
