--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,1 +1,17 @@
 h1 My profile
+
+ul#edit-profile-nav.nav.nav-pills
+  li.active
+    a href="#my_informations" data-toggle="pill" = t :my_informations
+  li
+    a href="#communities" data-toggle="pill" = t :communities
+
+= simple_form_for current_user do |f|
+  .tab-content.profile
+    .tab-pane.active id="my_informations"
+    .tab-pane id="communities"
+      = f.association :communities
+  
+  .form-actions
+    = f.submit class: "btn btn-primary"
+    = link_to t(:back), :back, class: "btn btn-link"
