--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,4 +1,25 @@
-#map {
-    height: 400px;
-    border: 2px solid #333;
+/*
+ *= require slabtext
+ */
+
+@import url(http://fonts.googleapis.com/css?family=Varela+Round);
+
+body {
+    background-color: #C44;
+}
+
+#main-content {
+    background: transparent;
+}
+
+h2.slab {
+    font-family: 'Varela Round', sans-serif;
+    text-shadow:  #200 0.1em 0.1em 0, #200 0.2em 0.2em 0, #200 0.3em 0.3em 0;
+    line-height: 1px;
+    padding-right: 1em;
+    color: #600A0A;
+}
+
+footer {
+    display: none;
 }
