--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,14 @@
-#map.span12
+.row
+  .span8
+    h2.slab MEET YOUR BROS
+/  .span4
+ /   = simple_form_for(User.new, :url => session_path(:user)) do |f|
+ /     = f.label :login
+ /     = f.text_field :login
 
+ /     = f.label :password
+ /     = f.password_field :password
+
+ /     label.checkbox
+ /       = f.check_box :remember_me
+  /      = t(:remember_me)
