--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@
  */
 
 
+html, body {
+    height: 100%;
+}
+
 .navbar .brand {
     font-size: 40px;
     color: #eee;
@@ -34,9 +38,18 @@
     }
 }
 
+.container {
+    height: 100%;
+
+    > .row {
+	height: 100%
+    }
+}
+
 #main-content {
     background: #fff;
     padding: 20px 0px 20px 0px;
+    min-height: 100%;
 }
 
 #page-footer {
