--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -66,10 +66,10 @@ html lang="en"
                     a href="#"= t :about
                   li.divider |
                   li
-                    a href="#"= t :sitemap
+                    a href="https://github.com/phorque/4couch" target="_blank" = t :source_code
                   li.divider |
                   li
-                    a href="https://github.com/phorque/4couch" target="_blank" = t :source_code
+                    a href="https://github.com/phorque/4couch/issues" target="_blank" = t :report_bug
     = javascript_include_tag 'http://maps.googleapis.com/maps/api/js?key=AIzaSyBjfN8302UN7Pb_gN5aaVDnTEznfbqwvJg&sensor=true'
     = javascript_include_tag "application"
     = javascript_include_tag params[:controller]
