--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,8 +1,20 @@
 h1 My profile
 
-= simple_form_for current_user do |f|
-  .tab-content.profile
-    .tab-pane.active id="my_informations"
+= simple_form_for current_user, :method => 'put' do |f|
+  .control-group
+    = f.label :name
+    .controls
+      = f.text_field :name
+
+  .control-group
+    = f.label :website
+    .controls
+      = f.text_field :website
+
+  .control-group
+    = f.label :biography
+    .controls
+      = f.text_area :biography, :rows => 3
 
   .form-actions
     = f.submit class: "btn btn-primary"
