--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,7 @@ html lang="en"
 
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Varela+Round'
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag params[:controller]
 
