--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -3,4 +3,5 @@
     h2.slab Meet your bros
 .row
   .span6.offset3
-    button.btn.btn-block.btn-huge href=new_user_registration_path = t :sign_up
+    button.btn.btn-block.btn-huge
+      a href=new_user_registration_path = t :sign_up
