--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -72,7 +72,7 @@ html lang="en"
               footer#page-footer
                 ul.breadcrumb
                   li
-                    a href="#"= t :about
+                    a href="https://github.com/phorque/4couch/wiki" target="_blank" = t :about
                   li.divider |
                   li
                     a href="https://github.com/phorque/4couch" target="_blank" = t :source_code
