huge layout refacto

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -38,5 +38,5 @@ body {
 @navbarLinkColor: @grayLight;
 @navbarLinkColorHover: @white;
 @navbarLinkColorActive: @navbarLinkColorHover;
-@bodyBackground: #C64533;
+//@bodyBackground: #C64533;
 
