--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,10 +13,6 @@
  */
 
 
-html, body {
-    height: 100%;
-}
-
 .navbar .brand {
     font-size: 40px;
     color: #eee;
@@ -38,20 +34,11 @@ html, body {
     }
 }
 
-.container {
-    height: 100%;
-
-    > .row {
-	height: 100%
-    }
+.container.main {
+    padding-top: 40px;
+    background: #FFF;
 }
 
-#main-content {
-    background: #fff;
-    padding: 20px 0px 20px 0px;
-    min-height: 100%;
-}
-
-#page-footer {
-    margin-top: 20px;
+#nav {
+    background: #FFF;
 }
