--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,21 +1,27 @@
-h2= t :sign_up
-= simple_form_for(User.new, :url => registration_path(resource_name)) do |f|
-  = devise_error_messages!
+.span6.offset3
+  = form_for(User.new, :html => {:class => 'form-horizontal'}, :url => registration_path(resource_name)) do |f|
+    .control-group
+      = f.label :email, class: 'control-label'
+      .controls
+        = f.email_field :email
 
-  = f.label :email
-  = f.email_field :email
+    .control-group
+      = f.label :username, class: 'control-label'
+      .controls
+        = f.text_field :username
 
-  = f.label :username
-  = f.text_field :username
+    .control-group
+      = f.label :password, class: 'control-label'
+      .controls
+        = f.password_field :password
 
-  = f.label :password
-  = f.password_field :password
+    .control-group
+      = f.label :password_confirmation, class: 'control-label'
+      .controls
+        = f.password_field :password_confirmation
 
-  = f.label :password_confirmation
-  = f.password_field :password_confirmation
-
-  .form-actions
-    = f.submit class: "btn btn-primary"
-    = link_to t(:sign_in), new_session_path(resource_name), class: "btn btn-link"
-    = link_to t(:forgot_password), new_password_path(resource_name), class: "btn btn-link"
+    .form-actions
+      = f.submit class: "btn btn-primary"
+      = link_to t(:sign_in), new_session_path(resource_name), class: "btn btn-link"
+      = link_to t(:forgot_password), new_password_path(resource_name), class: "btn btn-link"
 
