--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,21 +1,7 @@
-h1 My profile
+- content_for(:nav) do
+  ul.nav.nav-tabs.nav-stacked
+    - [:profile, :preferences, :contact, :password].each do |section|
+      li class=(section.to_s == @section ? 'active' : '')
+        = link_to t(section), edit_user_section_path(current_user, section)
 
-= simple_form_for current_user, :method => 'put' do |f|
-  .control-group
-    = f.label :name
-    .controls
-      = f.text_field :name
-
-  .control-group
-    = f.label :website
-    .controls
-      = f.text_field :website
-
-  .control-group
-    = f.label :biography
-    .controls
-      = f.text_area :biography, :rows => 3
-
-  .form-actions
-    = f.submit class: "btn btn-primary"
-    = link_to t(:back), :back, class: "btn btn-link"
+= render :partial => "users/#{@section}_form"
