--- a/app/views/users/_password_form.html.slim
+++ b/app/views/users/_password_form.html.slim
@@ -2,7 +2,7 @@
   .control-group
     = f.label :current_password, class: 'control-label'
     .controls
-      = f.password_field :current_password, :required => true
+      = f.password_field :current_password
 
   .control-group
     = f.label :password, class: 'control-label'
