--- a/app/views/communities/index.html.slim
+++ b/app/views/communities/index.html.slim
@@ -1,3 +1,9 @@
+.well.well-large
+  .span4
+    .form-search action=communities_path method="get"
+      input.input-medium.search-query.span3 type="text" name="q" placeholder=t(:search_placeholder)
+  .span3
+    a.btn.btn-success.span2.pull-right href=new_community_path = t(:create_your_own_community)
 ul
   - @communities.each do |community|
     li= community.name
