--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,7 +20,7 @@ html lang="en"
     link href="images/favicon.ico" rel="shortcut icon"
 
   body
-    .navbar.navbar-fixed-top
+    .navbar
       .navbar-inner
         .container
           a.btn.btn-navbar data-target=".nav-collapse" data-toggle="collapse"
@@ -34,9 +34,6 @@ html lang="en"
               li= link_to t(:couches), couches_path
             #user-nav-container.nav.pull-right
               ul.nav
-                li
-                  form.navbar-search action="/search" method="get"
-                    input.search-query type="text" name="q" placeholder="Search"
                 li.divider-vertical
                 - if user_signed_in?
                   li.dropdown
@@ -73,7 +70,8 @@ html lang="en"
           #content.span5
             = yield
         - else
-          = yield
+          #content.span8.offset2
+            = yield
       .row
         .span8.offset2
           footer
