--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -12,6 +12,15 @@ h2.slab {
     color: #822;
 }
 
-footer {
-    display: none;
-}
+#map {
+    height: 400px;
+    border: 2px solid #333;
+    border-radius: 2px;
+
+    img { 
+	max-width: none;
+    }
+    label { 
+	width: auto; display:inline; 
+    }
+} 
