--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -84,6 +84,6 @@ html lang="en"
               li.divider |
               li
                 a href="https://github.com/phorque/4couch/issues" target="_blank" = t 'footer.report_bug'
-    = javascript_include_tag 'http://maps.googleapis.com/maps/api/js?key=AIzaSyBjfN8302UN7Pb_gN5aaVDnTEznfbqwvJg&sensor=true'
     = javascript_include_tag "application"
     = javascript_include_tag params[:controller]
+    = yield :scripts
