--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,8 @@
-h2.slab
-#map= gmaps4rails(@couches)
+.span3.offset1
+  h2.slab Meet your bros!
+  p.definition
+    strong.title==' t('home.definition.title')
+    span.content= t('home.definition.content')
+    em.example= t('home.definition.example')
+.span7
+  #map= gmaps4rails(@couches)
