better map rendering on the homepage

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -5,4 +5,4 @@
     span.content= t('home.definition.content')
     em.example= t('home.definition.example')
 .span7
-  #map= gmaps4rails(@couches)
+  #map= map(@couches)
