--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,7 +30,7 @@ html lang="en"
           a.brand href=root_path 4couch
           .container-fluid.nav-collapse
             form.navbar-search.pull-left action=couches_path
-              input.search-query type="text" placeholder="Search" name="q"
+              input#search.search-query.span3 type="text" placeholder="Search" name="q"
             #user-nav-container.nav.pull-right
               ul.nav
                 li.divider-vertical
