add a 'ready to host?' link on the map

--- a/app/views/couches/index.html.slim
+++ b/app/views/couches/index.html.slim
@@ -1,1 +1,4 @@
-#map= couches_map(@couches, :lat => @lat, :lng => @lng)
+p
+  #map= couches_map(@couches, :lat => @lat, :lng => @lng)
+p.pull-right
+  a href=new_couch_path Ready to host?
