--- a/app/views/users/_nav.html.slim
+++ b/app/views/users/_nav.html.slim
@@ -2,4 +2,4 @@ ul.nav.nav-tabs.nav-stacked
   li
     = link_to t(:profile), user_path(current_user)
   li
-    = link_to t(:my_couches), user_couches_path(current_user)
+    = link_to t(:my_place), user_couches_path(current_user)
