huge renaming and cleanup

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -5,4 +5,4 @@
     span.content= t('home.definition.content')
     em.example= t('home.definition.example')
 .span8
-  #map= home_map(@couches)
+  #map= home_map(@places)
