--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,7 +29,7 @@ html lang="en"
             span.icon-bar
           a.brand href=root_path 4couch
           .container-fluid.nav-collapse
-            form.navbar-search.pull-left action=couches_path
+            form.navbar-search.pull-left action=places_path
               input#search.search-query.span3 type="text" placeholder="Search" name="q"
             #user-nav-container.nav.pull-right
               ul.nav
