--- a/app/views/places/_form.html.slim
+++ b/app/views/places/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @couch, :html => { :class => "form-horizontal" } do |f|
+= form_for @place, :html => { :class => "form-horizontal" } do |f|
   .control-group
     = f.label :title, :class => 'control-label'
     .controls
@@ -10,4 +10,4 @@
   .form-actions
     = f.submit nil, :class => 'btn btn-primary'
     '
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), couches_path, :class => 'btn'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), places_path, :class => 'btn'
