--- a/app/views/places/show.html.slim
+++ b/app/views/places/show.html.slim
@@ -14,6 +14,6 @@ p
 .form-actions
   = link_to t('.back', :default => t("helpers.links.back")), places_path, :class => 'btn'
   '
-  = link_to t('.edit', :default => t("helpers.links.edit")), edit_places_path(@place), :class => 'btn'
+  = link_to t('.edit', :default => t("helpers.links.edit")), edit_place_path(@place), :class => 'btn'
   '
-  = link_to t('.destroy', :default => t("helpers.links.destroy")), places_path(@place), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+  = link_to t('.destroy', :default => t("helpers.links.destroy")), place_path(@place), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
