--- a/app/views/places/edit.html.slim
+++ b/app/views/places/edit.html.slim
@@ -1,4 +1,4 @@
-- model_class = Couch
+- model_class = Place
 div class="page-header"
   h1=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human, :default => "Edit #{model_class.model_name.human}")
 = render :partial => "form"
