--- a/app/views/places/show.html.slim
+++ b/app/views/places/show.html.slim
@@ -9,7 +9,7 @@ p
 p
   strong= model_class.human_attribute_name(:description) + ':'
   br
-  = @place.description
+  == markdown(@place.description)
 
 .form-actions
   = link_to t('.back', :default => t("helpers.links.back")), places_path, :class => 'btn'
