--- a/app/views/places/show.html.slim
+++ b/app/views/places/show.html.slim
@@ -1,19 +1,5 @@
-- model_class = Place
-div class="page-header"
-  h1=t '.title', :default => model_class.model_name.human
+- content_for(:nav) do
+  = render 'places/nav'
 
-p
-  strong= model_class.human_attribute_name(:title) + ':'
-  br
-  = @place.title
-p
-  strong= model_class.human_attribute_name(:description) + ':'
-  br
-  == markdown(@place.description)
-
-.form-actions
-  = link_to t('.back', :default => t("helpers.links.back")), places_path, :class => 'btn'
-  '
-  = link_to t('.edit', :default => t("helpers.links.edit")), edit_place_path(@place), :class => 'btn'
-  '
-  = link_to t('.destroy', :default => t("helpers.links.destroy")), place_path(@place), :method => "delete", :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-danger'
+h1= @place.title
+== markdown(@place.description)
