--- a/app/views/users/_password_form.html.slim
+++ b/app/views/users/_password_form.html.slim
@@ -1,19 +1,16 @@
-= simple_form_for @user, html: { class: 'form-horizontal' } do |f|
-  .control-group
-    = f.label :current_password, class: 'control-label'
-    .controls
-      = f.password_field :current_password
+= form_for @user do |f|
+  = f.label :current_password, class: 'control-label'
+  = f.password_field :current_password
 
-  .control-group
-    = f.label :password, class: 'control-label'
-    .controls
-      = f.password_field :password, :autocomplete => "off"
+  = f.label :password, class: 'control-label'
+  = f.password_field :password, :autocomplete => "off"
 
-  .control-group
-    = f.label :password_confirmation, class: 'control-label'
-    .controls
-      = f.password_field :password_confirmation
+  = f.label :password_confirmation, class: 'control-label'
+  = f.password_field :password_confirmation
 
-  .form-actions
-    = f.submit class: "btn btn-primary"
+  .form-actions.btn-toolbar
+    .pull-right
+      a.btn href=user_path(@user) Cancel
+      = f.submit class: 'btn btn-primary'
+
 
